lang.java.statics.test/tests/positive/classes/nested/inner-class-instantiation-in-subclass-of-enclosing-class.yes.javtest
STATIX ok
JAVAC  ok

[A]
public class A {
    public class B {}
}

[C]
public class C extends A {
    public B b = new B();
}
