lang.java.statics.test/tests/negative/classes/inheritance/inheritnonexistingclass.no.javtest
STATIX fail java\.names\.lexical-type-name.*Id\(\"C\"\).*
JAVAC  fail cannot find symbol

[A]
public class A {}

[B]
public class B extends C {}

